--- a/liquid-prep-app/src/app/components/sensor-locator-modal/sensor-locator-modal.component.html
+++ b/liquid-prep-app/src/app/components/sensor-locator-modal/sensor-locator-modal.component.html
@@ -10,9 +10,10 @@
     <div *ngIf="showStep2">
       <span class="modal-step">Step 2 of 2</span>
       <h1 mat-dialog-title class="dialog-title">Set Sensor Location</h1>
+
       <div>
         <p *ngIf="requestingLocation" class="sensor-locator-status">Getting GPS location.</p>
-        <p *ngIf="!requestingLocation" class="sensor-locator-status">GPS location found.</p>
+        <p *ngIf="locationFound" class="sensor-locator-status">GPS location found.</p>
         <div
           class="locator-spinner"
           fxFlexFill fxLayout="column"
@@ -23,17 +24,22 @@
             <mat-spinner diameter="38" color="primary"></mat-spinner>
           </div>
         </div>
+        <div *ngIf="locationFound">
+          <span class="sensor-gps-label">GPS coordinates:</span>
+          <span class="sensor-gps-value">{{geocode}}</span>
+        </div>
       </div>
 
-      <div *ngIf="!requestingLocation">
-        <span class="sensor-gps-label">GPS coordinates:</span>
-        <span class="sensor-gps-value">{{geocode}}</span>
+      <div *ngIf="!locationFound && !requestingLocation">
+        <span class="error-message">{{errorMessage}}</span>
       </div>
+
     </div>
 
     <div mat-dialog-actions class="action-buttons horizontal">
       <button mat-button (click)="onCancel()" class="secondary-button">Cancel</button>
       <button *ngIf="showStep1" mat-button (click)="requestLocation()" class="secondary-button">Next</button>
-      <button *ngIf="showStep2" [disabled]="requestingLocation" mat-button (click)="saveSelection()" class="secondary-button">Save</button>
+      <button *ngIf="showStep2 && locationFound" [disabled]="requestingLocation" mat-button (click)="saveSelection()" class="secondary-button">Save</button>
+      <button *ngIf="showStep2 && !locationFound" [disabled]="requestingLocation" mat-button (click)="requestLocation()" class="secondary-button">Try Again</button>
     </div>
   </div>
