--- a/liquid-prep-app/src/app/components/sensor-locator-modal/sensor-locator-modal.component.scss
+++ b/liquid-prep-app/src/app/components/sensor-locator-modal/sensor-locator-modal.component.scss
@@ -81,6 +81,12 @@
     text-transform: uppercase;
   }
 
+  .error-message {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #DA1E28;
+  }
 }
 
 .mat-dialog-container {
