--- a/liquid-prep-app/src/app/components/dashboard/fields/details/details.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/fields/details/details.component.scss
@@ -4,7 +4,6 @@
   margin-left: 10px;
   margin-right: 10px;
   margin-top: 10px;
-  font-family: roboto;
 
   h1 {
     font-weight: 550;
@@ -18,7 +17,7 @@
   .title {
     color: gray;
     margin-top: 10px;
-    font-style: initial;
+    letter-spacing: 1px;
   }
 }
 
