--- a/liquid-prep-app/src/app/components/dashboard/fields/details/details.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/fields/details/details.component.html
@@ -15,24 +15,18 @@
   </div>
   <span class="title">SOIL TYPE</span>
   <h3>Sandy Clay Loam</h3>
-  <span>Detected from field Location</span>
+  <span style="font-style: italic">Detected from field Location</span>
 
   <span class="title">SENSORS</span>
   <mat-card>
-    <mat-card-content class="sensor-container">
+    <mat-card-content class="sensor-container" *ngFor="let sensor of sensors">
       <div>
-        <h3>A1</h3>
-        <span>Moisture Level: 80</span> <br />
-        <span>Last Reading" 11:00AM CDT</span> <br />
-        <span>GPS: 48.40228</span>
-      </div>
-    </mat-card-content>
-    <mat-card-content class="sensor-container">
-      <div>
-        <h3>A2</h3>
-        <span>Moisture Level: 80</span> <br />
-        <span>Last Reading" 11:00AM CDT</span> <br />
-        <span>GPS: 48.40228</span>
+        <h3>{{ sensor.sensorName }}</h3>
+        <span>Moisture Level: {{ sensor.moistureLevel }}</span>
+        <br />
+        <span>Last Reading" {{ adjustDate(sensor.lastUpdatedTime) }}</span>
+        <br />
+        <span>GPS: {{ sensor.geocode }}</span>
       </div>
     </mat-card-content>
   </mat-card>
