--- a/liquid-prep-app/src/app/components/dashboard/fields/edit-field/edit-field.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/fields/edit-field/edit-field.component.html
@@ -34,7 +34,24 @@
     </mat-form-field>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <h3 style="width: 90%; margin-bottom: 15px">Sensors</h3>
-    <button mat-stroked-button color="primary" class="sensor-button">
+    <div *ngFor="let sensor of sensors" class="sensor-container">
+      <h3>{{ sensor.sensorName }}</h3>
+      <span style="color: gray">GPS: {{ sensor.geocode }}</span>
+      <button
+        mat-button
+        class="remove-button"
+        (click)="removeSensor(sensor.id)"
+      >
+        REMOVE
+      </button>
+      <hr />
+    </div>
+    <button
+      mat-stroked-button
+      color="primary"
+      class="sensor-button"
+      (click)="openFullViewDialog()"
+    >
       <mat-icon aria-hidden="false">add</mat-icon>SENSOR
     </button>
   </div>
