--- a/liquid-prep-app/src/app/components/dashboard/fields/edit-field/edit-field.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/fields/edit-field/edit-field.component.scss
@@ -36,3 +36,30 @@
     font-weight: 500;
   }
 }
+
+.descripttion-container {
+  margin-top: 10px;
+  p {
+    letter-spacing: 1px;
+    color: gray;
+  }
+}
+
+.options-container {
+  margin-top: 20px;
+
+  .mat-radio-button {
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+.actions-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: calc(100% - 160px);
+
+  button {
+    letter-spacing: 1px;
+  }
+}
