--- a/liquid-prep-app/src/app/components/dashboard/fields/fields.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/fields/fields.component.scss
@@ -1,42 +1,62 @@
 .fields-container {
+  display: flex;
+  width: 100%;
+
+  .field-contents {
     display: flex;
-    width: 100%;
-  
-    .field-contents {
-      display: flex;
-      align-items: center;
-      height: 50px;
-  
-      .field-photo {
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        width: 40px;
-        height: 40px;
-        margin-right: 10px;
-      }
-  
-      h3 {
-        padding: 0px;
-        margin: 0px;
-        font-weight: 550;
-      }
-  
-      .type {
-        color: gray;
-      }
+    align-items: center;
+    height: 50px;
+
+    .field-photo {
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      width: 40px;
+      height: 40px;
+      margin-right: 10px;
+    }
+
+    h3 {
+      padding: 0px;
+      margin: 0px;
+      font-weight: 550;
+    }
+
+    .type {
+      color: gray;
     }
   }
-  
-  .empty-fields-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 100px;
+}
+
+.empty-fields-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
+
+.add-field-button {
+  position: fixed;
+  bottom: 250px;
+  right: 30px;
+}
+
+.search-section {
+  input {
+    padding: 8px 26px 8px 8px;
+    font-size: 16px;
+    width: calc(100% - 32px);
+    &.searchbox:focus-visible {
+      outline: 1px solid #0f62fe;
+    }
   }
-  
-  .add-field-button {
-    position: fixed;
-    bottom: 250px;
-    right: 30px;
+
+  .mat-icon {
+    position: absolute;
+    top: 6px;
+    right: 0;
+    color: rgba(#262626, 0.5);
   }
-  
+  position: sticky;
+  top: 56px;
+  z-index: 100;
+}
