--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
@@ -2,7 +2,6 @@
 </app-header-title>
 <div class="add-crop" style="overflow-x:hidden;" fxFlexFill cdkScrollable>
 
-
   <div class="horizontal" style="margin-bottom: 8px">
     <div class="imgHolder" *ngIf="!todayWeather">
       <!-- <mat-icon class="vertical-align-middle primary-blue" *ngIf="loading">hourglass_empty</mat-icon> -->
@@ -14,61 +13,55 @@
 
   <div *ngIf="myCropStatus == 'crop-selected'">
 
-<div class="cropsContainer">
-    <mat-grid-list class="grid" cols="1" rowHeight="120" gutterSize="25px" *ngIf="activeTab == tabs[0]">
-      <mat-grid-tile *ngFor="let crop of myCrops" class="shadowBox">
-        <mat-card class="card full-card">
-          <div class="cardDetails">
-            <div>
-              <span class="mat-h1">{{crop.cropName}}</span>
-            </div>
-            <div class="cropDates">
-              <span>Planted {{crop.seedingDate | date:'MMMM d'}}</span>
-            </div>
-            <div>
-              <button class="measureButton" mat-icon-button (click)="onViewCropAdvice(crop)">
-                MEASURE
-              </button>
-              <!-- TODO: Add Edit button functionality  -->
-              <button mat-icon-button>
-                <mat-icon>edit</mat-icon>
-              </button>
-              <button mat-icon-button (click)="openDeleteCropDialog(crop)">
-                <mat-icon>delete</mat-icon>
-              </button>
-            </div>
-          </div>
-          <div class="cardImageHolder">
-            <img mat-card-image class="cardImage" src="{{ crop.url }}" alt="{{ crop.cropName }}" />
-          </div>
-          <div fxLayout="row"
-              fxFill
-              fxLayoutGap="28px"
-              fxLayoutAlign="space-between end"
-              style="padding-left: 8px">
-            <div>
-              <mat-menu #menu="matMenu">
-                <button mat-menu-item (click)="onRemoveCrop(crop)">
-                  <mat-icon>delete</mat-icon>
-                  <span>Remove Crop</span>
+    <div class="cropsContainer">
+      <mat-grid-list class="grid" cols="1" rowHeight="120" gutterSize="25px" *ngIf="activeTab == tabs[0]">
+        <mat-grid-tile *ngFor="let crop of myCrops" class="shadowBox">
+          <mat-card class="card full-card">
+            <div class="cardDetails">
+              <div>
+                <span class="mat-h1">{{crop.cropName}}</span>
+              </div>
+              <div class="cropDates">
+                <span>Planted {{crop.seedingDate | date:'MMMM d'}}</span>
+              </div>
+              <div>
+                <button class="measureButton" mat-icon-button (click)="onViewCropAdvice(crop)">
+                  MEASURE
                 </button>
-              </mat-menu>
+                <!-- TODO: Add Edit button functionality  -->
+                <button mat-icon-button>
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button (click)="openDeleteCropDialog(crop)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </div>
             </div>
-          </div>
-        </mat-card>
-      </mat-grid-tile>
-    </mat-grid-list>
+            <div class="cardImageHolder">
+              <img mat-card-image class="cardImage" src="{{ crop.url }}" alt="{{ crop.cropName }}" />
+            </div>
+            <div fxLayout="row"
+                fxFill
+                fxLayoutGap="28px"
+                fxLayoutAlign="space-between end"
+                style="padding-left: 8px">
+              <div>
+                <mat-menu #menu="matMenu">
+                  <button mat-menu-item (click)="onRemoveCrop(crop)">
+                    <mat-icon>delete</mat-icon>
+                    <span>Remove Crop</span>
+                  </button>
+                </mat-menu>
+              </div>
+            </div>
+          </mat-card>
+        </mat-grid-tile>
+      </mat-grid-list>
+    </div>
 
-  </div>
-
-    <mat-toolbar class="add-crop-button mat-elevation-z4 custom-toolbar">
-      <mat-toolbar-row style="padding: 0 5px;">
-        <button class="mat-title toolbar-title button" (click)="fabClicked()">
-          ADD A NEW CROP
-        </button>
-      </mat-toolbar-row>
-    </mat-toolbar>
-
+    <div fxFlexFill fxLayout="row" fxLayoutAlign="center center">
+      <button mat-flat-button color="primary" (click)="fabClicked()">ADD A NEW CROP</button>
+    </div>
 
   </div>
 
@@ -81,4 +74,5 @@
     <p class="mat-body-1">Select the crop for your watering advice</p>
     <button mat-flat-button color="primary" style="width:275px" (click)="onAdd1stCrop()">ADD A NEW CROP</button>
   </div>
+
 </div>
