migrated to angular 13

--- a/liquid-prep-app/src/styles.scss
+++ b/liquid-prep-app/src/styles.scss
@@ -1,8 +1,8 @@
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '@angular/material/theming';
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
 
 // Plus imports for other components in your app.
 
