Update Sensor UI

--- a/liquid-prep-app/src/app/components/dashboard/dashboard.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/dashboard.component.html
@@ -8,7 +8,13 @@
       <router-outlet></router-outlet>
       <mat-toolbar class="toolbarNav">
         <div class="container" fxLayout="row" fxFlexFill fxLayoutAlign="space-around center" >
-          <button mat-flat-button routerLink="sensors" routerLinkActive="active-link" class="btn-color" >
+          <!-- <button mat-flat-button routerLink="sensors" routerLinkActive="active-link" class="btn-color" >
+            <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="0px">
+              <mat-icon class="material-symbols-outlined">sensors</mat-icon>
+              <span>Sensors v1</span>
+            </div>
+          </button> -->
+          <button mat-flat-button routerLink="sensors-v2" routerLinkActive="active-link" class="btn-color" >
             <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="0px">
               <mat-icon class="material-symbols-outlined">sensors</mat-icon>
               <span>Sensors</span>
