--- a/liquid-prep-app/src/app/components/dashboard/fields/add-field/add-field.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/fields/add-field/add-field.component.html
@@ -1,14 +1,14 @@
 <app-header-title fxFlexFill> </app-header-title>
 <mat-progress-bar *ngIf="progress" mode="indeterminate"></mat-progress-bar>
 <form [formGroup]="fieldForm">
-  <div class="form-container">
-    <h3>Field Name</h3>
-    <mat-form-field class="field-input">
-      <mat-label>Input</mat-label>
+  <mat-card class="form-container">
+    <!-- <h3>Field Name</h3> -->
+    <mat-form-field class="field-input" appearance="fill">
+      <mat-label>Field Name</mat-label>
       <input formControlName="fieldName" matInput />
     </mat-form-field>
-    <h3>Description</h3>
-    <mat-form-field class="field-input">
+
+    <mat-form-field class="field-input" appearance="fill">
       <mat-label>Description</mat-label>
       <textarea
         formControlName="description"
@@ -16,27 +16,48 @@
         class="description-input"
       ></textarea>
     </mat-form-field>
-    <h3>Select Crop</h3>
-    <mat-form-field class="field-input">
+
+    <mat-form-field appearance="fill">
       <mat-label>Select Crop</mat-label>
-      <input
-        matInput
-        formControlName="crop"
-        (click)="openDialog(dialogTemplate)"
-      />
-      <mat-icon matSuffix>keyboard_arrow_down</mat-icon>
+      <mat-select matInput formControlName="crop" matNativeControl>
+        <mat-option value="" selected></mat-option>
+        <mat-option *ngFor="let crop of cropsList" [value]="crop.cropName">
+          {{ crop.cropName }}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
-    <h3>Crop Plant Date</h3>
-    <mat-form-field style="width: 80%; margin-bottom: 20px">
+
+    <mat-form-field appearance="fill">
+      <mat-label>Select Soil Type</mat-label>
+      <mat-select matInput formControlName="soilType" matNativeControl>
+        <mat-option value="" selected></mat-option>
+        <mat-option value="Heavy clay soil">Heavy clay soil</mat-option>
+        <mat-option value="Sandy soil (coarse texture)"
+          >Sandy soil (coarse texture)</mat-option
+        >
+        <mat-option value="Sandy loam soil (moderately coarse texture)"
+          >Sandy loam soil (moderately coarse texture)</mat-option
+        >
+        <mat-option value="Sandy clay loam soil (moderately fine texture)"
+          >Sandy clay loam soil (moderately fine texture)</mat-option
+        >
+        <mat-option value="Clay soil (fine texture)"
+          >Clay soil (fine texture)</mat-option
+        >
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field class="field-input" appearance="fill">
       <mat-label>Choose a date</mat-label>
       <input formControlName="plantDate" matInput [matDatepicker]="picker" />
       <mat-hint>MM/DD/YYYY</mat-hint>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <h3 style="width: 90%; margin-bottom: 15px">Sensors</h3>
+
+    <h3>Sensors</h3>
     <div *ngFor="let sensor of sensors" class="sensor-container">
-      <h3>{{ sensor.sensorName }}</h3>
+      <h4>{{ sensor.sensorName }}</h4>
       <span style="color: gray">GPS: {{ sensor.geocode }}</span>
       <button
         mat-button
@@ -45,7 +66,6 @@
       >
         REMOVE
       </button>
-      <hr />
     </div>
     <button
       mat-stroked-button
@@ -55,30 +75,5 @@
     >
       <mat-icon aria-hidden="false">add</mat-icon>SENSOR
     </button>
-  </div>
-
-  <ng-template #dialogTemplate>
-    <h2 mat-dialog-title>Select a crop</h2>
-    <hr />
-    <mat-dialog-content>
-      <div class="options-container">
-        <mat-radio-group
-          aria-label="Select an option"
-          formControlName="cropSelect"
-        >
-          <mat-radio-button *ngFor="let crop of cropsList" [value]="crop">{{
-            crop.cropName
-          }}</mat-radio-button>
-        </mat-radio-group>
-      </div>
-      <div class="actions-container">
-        <button mat-button mat-dialog-close>CANCEL</button>
-        <button mat-button mat-dialog-close (click)="clickCropNext()">
-          NEXT
-        </button>
-      </div>
-    </mat-dialog-content>
-  </ng-template>
+  </mat-card>
 </form>
-
-
