--- a/liquid-prep-app/src/app/components/dashboard/fields/edit-field/edit-field.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/fields/edit-field/edit-field.component.html
@@ -73,16 +73,15 @@
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle> -->
     <h3 style="width: 90%; margin-bottom: 15px">Sensors</h3>
     <div *ngFor="let sensor of sensors" class="sensor-container">
-      <h4>{{ sensor.sensorName }}</h4>
-      <span style="color: gray">GPS: {{ sensor.geocode }}</span>
+      <h4>{{ sensor.name }}</h4>
+      <span style="color: gray">{{ sensor.sensorTypeName }}</span>
       <button
         mat-button
         class="remove-button"
-        (click)="removeSensor(sensor.id)"
+        (click)="removeSensor(sensor.mac)"
       >
         REMOVE
       </button>
-      <hr />
     </div>
     <button
       mat-stroked-button
