--- a/liquid-prep-app/src/app/components/dashboard/fields/details/details.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/fields/details/details.component.html
@@ -1,19 +1,19 @@
 <app-header-title fxFlexFill> </app-header-title>
 <div class="details-container">
-  <h1>{{ fieldDetails.fieldName }}</h1>
+  <h1>{{ fieldDetails?.fieldName }}</h1>
   <span class="title">DESCRIPTION</span>
   <p>
-    {{ fieldDetails.description }}
+    {{ fieldDetails?.description }}
   </p>
   <span class="title">CROP</span>
   <div class="crop-container">
     <img
       class="field-photo"
-      [src]="getFieldPhoto(fieldDetails.crop.cropName)"
+      [src]="getFieldPhoto(fieldDetails?.crop.type)"
     />
     <div class="photo-details">
-      <h2>{{ fieldDetails.crop.cropName }}</h2>
-      <span>{{ fieldDetails.plantDate }}</span>
+      <h2>{{ fieldDetails?.crop.type }}</h2>
+      <span>{{ fieldDetails?.plantDate }}</span>
     </div>
   </div>
   <span class="title">SOIL TYPE</span>
