crop pill style

--- a/liquid-prep-app/src/app/components/dashboard/fields/details/details.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/fields/details/details.component.scss
@@ -144,6 +144,26 @@ div:last-of-type h1 {
   color: #212121;
 }
 
+.sorghum-pill {
+  background-color: #5d4037;
+  color: #ffff;
+}
+
+.wheat-pill {
+  background-color: #ffecb3;
+  color: #212121;
+}
+
+.soybean-pill {
+  background-color: #2e7d32;
+  color: #ffff;
+}
+
+.cotton-pill {
+  background-color: #eaeaea;
+  color: #212121;
+}
+
 .crop-pill {
   font-size: 14px;
   padding: 4px 16px;
