Update sensor labels

--- a/liquid-prep-app/src/app/components/dialog/dialog.component.html
+++ b/liquid-prep-app/src/app/components/dialog/dialog.component.html
@@ -23,8 +23,8 @@
           <mat-form-field appearance="outline">
             <mat-label>Sensor Type</mat-label>
             <mat-select [(ngModel)]="sensorType" name="sensorType" required>
-              <mat-option value="gen">Generic Moisture Sensor</mat-option>
-              <mat-option value="plm">Plantmate Moisture Sensor</mat-option>
+              <mat-option value="gen">Capacitive Soil Moisture Sensor v1.2</mat-option>
+              <mat-option value="plm">PlantmateⓇ Capacitive Soil Moisture Sensor Module 3.3V</mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field appearance="outline">
