--- a/liquid-prep-app/src/app/components/dashboard/sensors-v2/sensors-v2.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/sensors-v2/sensors-v2.component.scss
@@ -39,6 +39,11 @@
     font-weight: 500;
   }
   .sensor-type {
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
     margin-left: 8px;
     border-radius: 20px;
     font-size: 10px;
